# HAL

./: CMakeLists.txt  Interface.h  README.md
Inc/: UartDriver.h
Src/: UartDriver.cpp  main.cpp
hw/: uart.sv
